<resources>
    <string name="app_name">My_design_angge</string>
    <string name="create_an_account">Create an Account</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_assistant_in_finding_and_navigating_through_hospitals">Your assistant in finding and navigating through Hospitals</string>
    <string name="login2">Login</string>
    <string name="create_account">Create Account</string>
    <string name="let_s_get_started2">Let\'s Get Started!</string>
    <string name="your_assistant_in_finding_hospitals_and_navigating_your_way">Your assistant in finding hospitals and navigating your way</string>
    <string name="medi_image">medi_logo image</string>
    <string name="let_s_get_started_cont">Let\'s Get Started!</string>
    <string name="create_account_cont">CREATE ACCOUNT</string>
    <string name="login_cont">LOGIN</string>
    <string name="todo_cont">TODO</string>
    <string name="forgot_password_cont">Forgot Password?</string>
    <string name="welcome_back_cont">WELCOME BACK!</string>
    <string name="register_to_get_started">Register to get started</string>
    <string name="welcome">WELCOME!</string>
    <string name="create_account_1">CREATE ACCOUNT</string>
    <string name="already_have_an_account">Already have an account?  </string>
    <string name="login_2">Login</string>
    <string name="login_to_your_account_2">Login to your account</string>
    <string name="don_t_have_an_account">Don\'t have an account?  </string>
    <string name="login_3">LOGIN</string>
    <string name="create_account_2">Create Account</string>
    <string name="confirm_password_2">Confirm Password</string>
    <string name="amico_image">amico image</string>
    <string name="amico_navigation_image">amico navigation image</string>
</resources>