<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">


    <ImageView
        android:id="@+id/medi_logo"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:contentDescription="@string/medi_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/medimap_logo_3"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/mediname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo_cont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/medimap"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/your_assistant_in_finding_hospitals_and_navigating_your_way"
        android:textColor="@color/dark_primary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/medi_logo"
        app:layout_constraintStart_toStartOf="@+id/medi_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds,TextSizeCheck" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/let_s_get_started_cont"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/create_account_cont"
        android:textColor="@color/dark_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/medi_logo"
        app:layout_constraintVertical_bias="0.728" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_btn_solid"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_cont"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.132"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>