<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bitter_bold"
        android:gravity="center"
        android:text="@string/welcome_back_cont"
        android:textColor="@color/dark_primary"
        android:textSize="37sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.030" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/amico_navigation_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/image_nav" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="540dp"
        android:background="@drawable/login_transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/login_to_your_account_2"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/editTextEmail_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:autofillHints=""
                android:background="@drawable/name_bkgrnd"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.014" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:autofillHints=""
                android:background="@drawable/name_bkgrnd"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail_add" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium_italic"
                android:text="@string/forgot_password_cont"
                android:textColor="@color/dark_primary"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.879"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4"
                app:layout_constraintVertical_bias="0.866">

                <TextView
                    android:id="@+id/text_login_promt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Textlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingBottom="2dp"
                    android:text="@string/create_account_2"
                    android:textColor="#2B32B2"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:background="@drawable/third_button_blue"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login_3"
                android:textColor="@color/background1"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                app:layout_constraintVertical_bias="0.286" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>