<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bitter_bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/dark_primary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:contentDescription="@string/amico_image"
        android:src="@drawable/directions_amico__2_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="550dp"
        android:background="@drawable/login_transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/register_to_get_started"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/name_bkgrnd"
                android:drawableStart="@drawable/baseline_person_outline_24"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="13dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextEmail_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:background="@drawable/name_bkgrnd"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFullName"
                app:layout_constraintVertical_bias="0.0"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:background="@drawable/name_bkgrnd"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail_add"
                app:layout_constraintVertical_bias="0.0"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextConfirm_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:background="@drawable/name_bkgrnd"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/confirm_password_2"
                android:inputType="textPassword"
                android:padding="13dp"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                app:layout_constraintVertical_bias="0.0"
                android:autofillHints="" />

            <Button
                android:id="@+id/button4"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/third_button_blue"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/create_account_1"
                android:textColor="@color/background1"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextConfirm_Password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4">

                <TextView
                    android:id="@+id/text_login_promt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Textlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login_2"
                    android:textColor="#2B32B2"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>